--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="#" />
 
     <title>cookingrecipesProject</title>
@@ -35,7 +35,7 @@
 
     <div id="moreResults" class="container"></div>
     <div id="single-meal">
-
+        <button id="back">back</button>
     </div>
 
     <script src="script.js"></script>
