--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="#" />
-
+    <meta name="description"
+        content="The Cooking Recipes Project is a web application that provides a platform for users to discover a wide range of cooking recipes. Utilizing a third-party API, users can search for recipes based on categories, and making it easier to find their desired recipes.">
     <title>cookingrecipesProject</title>
 </head>
 
